fix: Novas entidades JPA para metodos de pagamento e meios de contato. FALTA AJUSTAR SERVICES E MAPPERS